; ModuleID = '/home/carl/AnghaBench/nginx/src/core/extr_ngx_palloc.c_ngx_pnalloc.c'
source_filename = "/home/carl/AnghaBench/nginx/src/core/extr_ngx_palloc.c_ngx_pnalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ngx_pnalloc(%struct.TYPE_5__* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ule i64 %6, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = call i8* @ngx_palloc_small(%struct.TYPE_5__* %12, i64 %13, i32 0)
  store i8* %14, i8** %3, align 8
  br label %19

15:                                               ; preds = %2
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %17 = load i64, i64* %5, align 8
  %18 = call i8* @ngx_palloc_large(%struct.TYPE_5__* %16, i64 %17)
  store i8* %18, i8** %3, align 8
  br label %19

19:                                               ; preds = %15, %11
  %20 = load i8*, i8** %3, align 8
  ret i8* %20
}

declare dso_local i8* @ngx_palloc_small(%struct.TYPE_5__*, i64, i32) #1

declare dso_local i8* @ngx_palloc_large(%struct.TYPE_5__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
